# TASK-LORD

./: .gitignore  Cargo.toml  GOAL-DESIGN.md  GOAL.md  LICENSE  LOOP-PROMPT.md  README.md  SECURITY.md  handoff.py  harvest.py  install.sh  ollama_client.py  run.sh  serve.py  sources_code.py  sources_transcripts.py  sources_trello.py  store.py
board/: index.html
scheduler/: com.tasklord.plist.template
src/: config.rs  deepseek.rs  handoff.rs  harvest.rs  llm.rs  main.rs  model.rs  ollama.rs  serve.rs  store.rs
src/sources/: code.rs  mod.rs  transcripts.rs  trello.rs
