[package]
name = "tasklord"
version = "0.1.0"
edition = "2021"
description = "Local Kanban command board that clocks every project across your AI agents and coding sessions — Linear-modeled, SQLite-backed, click-to-resume."
license = "MIT"

[[bin]]
name = "tasklord"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
walkdir = "2"
dirs = "5"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
